# PDFtoPodcast

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  README2.md  ROADMAP.md  SECURITY.md  SETUP_COMPLETE.md  VALIDATION_STRATEGY.md  app.py  pyproject.toml  render_report_only.py  requirements-dev.txt  requirements.txt  run_pipeline.py  validate_schemas.py
.github/: PULL_REQUEST_TEMPLATE.md  README2.md
.github/ISSUE_TEMPLATE/: README2.md  bug_report.md  feature_request.md
.github/workflows/: README2.md  ci.yml  claude-code-review.yml
docs/: appraisal.md  report.md
docs/plans/: 2026-02-16-fix-31-failing-tests.md  2026-02-17-best-so-far-correction-loop-design.md  2026-02-17-best-so-far-correction-loop-implementation.md  2026-02-17-correction-loop-improvements-design.md  2026-02-17-correction-loop-improvements-implementation.md  2026-02-17-podcast-show-summary-design.md  2026-02-17-podcast-show-summary-implementation.md  2026-02-18-readable-loop-output.md  2026-02-23-consistent-step-output-design.md  2026-02-23-consistent-step-output-implementation.md  2026-05-24-fix-pipeline-run-errors.md  README.md  appraisal.md  code-documentation-improvement.md  improve-cli-output.md  iterative-validation-correction.md  orchestrator-step-by-step-refactoring.md  pipeline-execution-implementation.md  podcast-generation.md  refactoring-phase-8.md  report-generation.md  report-rendering-improvements.md  web-app-platform.md
features/: README.md  README2.md  appraisal.md  code-documentation-improvement.md  codebase-refactoring.md  enhanced-grade-validation.md  improve-cli-output.md  iterative-validation-correction.md  orchestrator-step-by-step-refactoring.md  pipeline-execution-implementation.md  podcast-generation.md  refactoring-phase-8.md  report-generation.md  report-rendering-improvements.md
prompts/: Appraisal-correction.txt  Appraisal-editorials.txt  Appraisal-evidence-synthesis.txt  Appraisal-interventional.txt  Appraisal-observational.txt  Appraisal-prediction.txt  Appraisal-validation.txt  Classification.txt  Extraction-correction.txt  Extraction-prompt-editorials.txt  Extraction-prompt-evidence-synthesis.txt  Extraction-prompt-interventional.txt  Extraction-prompt-observational.txt  Extraction-prompt-prediction.txt  Extraction-validation.txt  Podcast-generation.txt  Podcast-summary.txt  README.md  README2.md  Report-correction.txt  Report-generation.txt  Report-validation.txt
schemas/: README2.md  appraisal.schema.json  appraisal_validation.schema.json  classification.schema.json  common.schema.json  editorials_opinion.schema.json  editorials_opinion_bundled.json  evidence_synthesis.schema.json  evidence_synthesis_bundled.json  interventional_trial.schema.json  interventional_trial_bundled.json  json-bundler.py  observational_analytic.schema.json  observational_analytic_bundled.json  podcast.schema.json  podcast_bundled.json  prediction_prognosis.schema.json  prediction_prognosis_bundled.json  readme.md  report.schema.json  report_bundled.json  report_validation.schema.json  report_validation_bundled.json  validation.schema.json
scripts/: render_report_only.py
src/: README.md  README2.md  config.py  llm.py  pdf_io.py  pipeline.py  prompts.py  schemas.py  schemas_loader.py  validation.py
src/llm/: README2.md  __init__.py  base.py  claude_provider.py  openai_provider.py
tests/: README.md  README2.md  conftest.py  validate_schemas.py
work-in-progress/: Extraction-prompt-editorials.txt  Extraction-prompt-interventional.txt  Extraction-prompt-observational.txt  Extraction-prompt.txt  common.schema.json  editorials_opinion.schema.json  evidence_synthesis.schema.json  extractie-JSON-RCT.json  extractie-JSON.json  interventional_trial.schema.json  json-bundler.py  observational_analytic.schema.json  readme.md
(+110 files in other folders)
